# rag-memory

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.supabase  .env.test  .gitignore  .reference-audit-principles.md  ARCHITECTURE_AUDIT.md  ASYNCURLSEEDER_VALIDATION.md  ASYNCURLSEEDER_VALIDATION_FINAL.md  CENTRALIZATION_SUMMARY.md  CLAUDE.md  CONVERSATION_SUMMARY_SESSION_2.md  CRAWL4AI_BUG_FIX.md  CRAWL4AI_POC_FINDINGS.md  DEBUGGING_SESSION.md  DEMO_TALKING_POINTS.md  DOCUMENTATION_ACCURACY_VERIFICATION.md  Dockerfile  FINAL_REVIEW.md  FLYIO_SCALE_TO_ZERO_ISSUE.md  GRAPHITI_METADATA_RESEARCH.md  HYBRID_RAG_KNOWLEDGE_GRAPH_RESEARCH.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_METADATA.md  INFRASTRUCTURE.md  INFRASTRUCTURE_SETUP_SUMMARY.md  INGEST_COMPLETION_AUDIT.md  INTEGRATION_TEST_SUMMARY.md  INVESTIGATION_FINDINGS.md  MCP_SERVER_GUIDE.md  METADATA_IMPLEMENTATION_SUMMARY.md  METADATA_SYSTEM_ANALYSIS.md  METADATA_USAGE_GUIDE.md  PROD_SETUP_GUIDE.md  PROJECT_STATUS.md  RAG_AND_KNOWLEDGE_GRAPHS_EXPLAINED.md  RAG_VS_KNOWLEDGE_GRAPHS_ANALYSIS.md  README.md  (+66 more)
.claude/: settings.json
.reference/: CLI_GUIDE.md  CLI_REFERENCE.md  CLI_TEST_PLAN.md  CLOUD_DEPLOYMENT.md  CLOUD_SETUP.md  KNOWLEDGE_GRAPH.md  MCP_QUICK_START.md  OVERVIEW.md  PRICING.md  README.md  SEARCH_OPTIMIZATION.md
benchmarking/: .env.example  (+2 more)
my_mcp_server/: .coveragerc  .gitattributes  .gitignore  DEVELOPER_GUIDE.md  DEVELOPMENT.md  README.md  SETUP_PROMPT.md  pyproject.toml  sitecustomize.py  test_correlation_id_integration.py
my_mcp_server/.claude/commands/: _platform_helpers.md  add-tool.md  getting-started.md
my_mcp_server/.reference/: mcp-sdk-knowledge-base.md  mcp-version-tracker.md
my_mcp_server/.reference/patterns/: unit_test_patterns.py
my_mcp_server/docs/: DECORATOR_PATTERNS.md  MCP_INSPECTOR_GUIDE.md  UNIFIED_LOGGING.md
my_mcp_server/my_mcp_server/: __init__.py  __main__.py  config.py  logging_config.py
my_mcp_server/my_mcp_server/client/: __init__.py  app.py
my_mcp_server/my_mcp_server/decorators/: base_logger_sink.py  exception_handler.py  parallelize.py  sqlite_logger.py  tool_logger.py  type_converter.py
my_mcp_server/my_mcp_server/log_system/: __init__.py
my_mcp_server/my_mcp_server/log_system/destinations/: elasticsearch_example.py  factory.py  sqlite.py
my_mcp_server/my_mcp_server/server/: __init__.py  app.py
my_mcp_server/my_mcp_server/tools/: __init__.py  example_tools.py
my_mcp_server/my_mcp_server/ui/: app.py
my_mcp_server/my_mcp_server/ui/pages/: 1_Home.py  2_Configuration.py  3_Logs.py  4_Documentation.py
my_mcp_server/tests/: README.md  __init__.py  conftest.py
my_mcp_server/tests/integration/: COVERAGE_GUIDE.md  MCP_INTEGRATION_TESTING_GUIDE.md  conftest.py  test_example_tools_edge_cases.py  test_example_tools_integration.py
my_mcp_server/tests/unit/: __init__.py  test_decorators.py
(+182 files in other folders)
