[project]
name = "pgvector-rag-poc"
version = "0.1.0"
description = "POC for PostgreSQL pgvector RAG system"
requires-python = ">=3.12"
dependencies = [
    # Core Database
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "numpy>=2.0.0",

    # LangChain (October 2025 stable versions)
    "langchain>=0.3.0,<0.4.0",
    "langchain-postgres>=0.0.12",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",

    # OpenAI
    "openai>=1.50.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]
jupyter = [
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
poc = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
